--- a/opdrachten/Opdracht 1/htmlindeles1.html
+++ b/opdrachten/Opdracht 1/htmlindeles1.html
@@ -28,9 +28,9 @@
 	<article>
 		<h1>Opleiding</h1>
 		<h2>CMD Amsterdam</h2>
-		<p>De opleiding Communication & Multimedia Design (CMD) Amsterdam leert studenten alles over het ontwerpen van online interactieve media. Dit betekent het begrijpen, bedenken en maken van interactieve media zoals websites, mobiele applicaties en interactieve televisie. Bij het ontwerpen van interactieve media staat de mens centraal. Niet alleen als eindgebruiker van een toepassing maar ook in de context van zijn leefomgeving. Studenten doen toegepast onderzoek en leren hun ontwerpen te testen op usability, gebruikersbehoefte en meetbare eindresultaten. Ze leren werken in multidisciplinaire projectteams aan opdrachten voor echte projectpartners.
+		<p>De opleiding Communication & Multimedia Design (CMD)Amsterdam leert studenten alles over het ontwerpen van online interactieve media. Dit betekent het begrijpen, bedenken en maken van interactieve media zoals websites, mobiele applicaties en interactieve televisie. Bij het ontwerpen van interactieve media staat de mens centraal. Niet alleen als eindgebruiker van een toepassing maar ook in de context van zijn leefomgeving. Studenten doen toegepast onderzoek en leren hun ontwerpen te testen op usability, gebruikersbehoefte en meetbare eindresultaten. Ze leren werken in multidisciplinaire projectteams aan opdrachten voor echte projectpartners.
 		De vakken <a href="http://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4/">opbouw studieprogramma</a> gaan over interactie & strategie, -design, - techniek en -cultuur. In de vakken leren studenten te denken en te handelen als een ontwerper. Hiervoor leren ze naast ‘ontwerpen’ ook ‘maken’, ‘onderzoeken’, ‘projectmanagen’ en ‘adviseren’. Studenten kunnen met behulp van keuzevakken, stages en minoren zelf richting geven aan hun opleiding. Na hun afstuderen komen studenten te werken in de creatieve industrie, gericht op de sector ‘nieuwe media’. Het werkveld waarin de interactieve media ontwerper zich begeeft is sterk in ontwikkeling. De opleiding houdt hier met een flexibel curriculum rekening mee en door met (keuze)vakken en projecten in te springen op nieuwe ontwikkelingen.
-		<a href="http://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4/">Video</a>
+		<video id="sampleMovie" src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4" controls>Video</video>
 		</p>
 	</article>
 
