--- a/deeltoets1/index.html
+++ b/deeltoets1/index.html
@@ -21,7 +21,7 @@
            <li><a href="opleidingen.html">Opleiding</a></li>
            <li><a href="onderwijsprogramma.html">Onderwijsprogramma</a></li>
            <li><a href="organisatie.html">Organisatie</a></li>
-           <li><a href="stagesprojecten.html">Stages en projecten</a></li>
+           <li><a href="aanmelden.html">Stages en projecten</a></li>
         </ul>
     </nav>
 
@@ -66,7 +66,7 @@
         <p>
 			Studenten kunnen na deze opleiding aan het werk in een grote diversiteit aan beroepen in het interactieve media werkveld. Tijdens de opleiding kunnen zij zich – naast het generieke kernprogramma – middels de profileringsvakken individueel ontwikkelen.
 			Afgestudeerde studenten komen daarmee in aanmerking voor o.a. de volgende vijf beroepen: Visual Interface Designer, Frontend Developer, Projectmanager, Contentmanager en Interaction Designer. Variaties hierop zijn natuurlijk mogelijk.
-			Mocht je als aankomend student meer willen weten of contact op willen nemen met een afgestudeerde studenten? Neem contact [link: contact] met ons op.
+			Mocht je als aankomend student meer willen weten of contact op willen nemen met een afgestudeerde studenten? Neem contact met ons op.
 			Uitstroomberoepen:
 			1. <a href="http://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4/">Frontenddeveloper</a>
 			2. <a href="http://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4/">Visual Designer</a>
@@ -75,14 +75,6 @@
 			5. <a href="http://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4/">Project Manager</a>
 		</p>
 	</article>
-
-	<aside>
-		<p>Hallo, ik ben een aside</p>
-	</aside>
-
-	<footer>
-		<p>Hallo, ik ben een footer</p>
-	</footer>
 
 </body>
 
