--- a/deeltoets1/index.html
+++ b/deeltoets1/index.html
@@ -32,11 +32,11 @@
 		De vakken opbouw studieprogramma gaan over interactie & strategie, -design, - techniek en -cultuur. In de vakken leren studenten te denken en te handelen als een ontwerper. Hiervoor leren ze naast ‘ontwerpen’ ook ‘maken’, ‘onderzoeken’, ‘projectmanagen’ en ‘adviseren’. Studenten kunnen met behulp van keuzevakken, stages en minoren zelf richting geven aan hun opleiding. Na hun afstuderen komen studenten te werken in de creatieve industrie, gericht op de sector ‘nieuwe media’. Het werkveld waarin de interactieve media ontwerper zich begeeft is sterk in ontwikkeling. De opleiding houdt hier met een flexibel curriculum rekening mee en door met (keuze)vakken en projecten in te springen op nieuwe ontwikkelingen.
 		</p>
 		<video id="sampleMovie" controls>
-			<track src="http://developer.longtailvideo.com/trac/export/2584/trunk/jw6/test/assets/captions/bunny-en.vtt" label="English captions" kind="captions" srclang="en-us" default />
-			<source src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4" type="video/mp4" />
-			<source src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.webm" type="video/webm" />
-			<source src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.ogv" type="video/ogv" />
-			<source src="http://camendesign.com/code/video_for_everybody/poster.jpg" type="video/jpg" />
+			<track src="http://developer.longtailvideo.com/trac/export/2584/trunk/jw6/test/assets/captions/bunny-en.vtt" label="English captions" kind="captions" srclang="en-us" default>
+			<source src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4" type="video/mp4">
+			<source src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.webm" type="video/webm">
+			<source src="http://clips.vorwaerts-gmbh.de/big_buck_bunny.ogv" type="video/ogv">
+			<source src="http://camendesign.com/code/video_for_everybody/poster.jpg" type="video/jpg">
 		</video>
 	</article>
 
