--- a/deeltoets1/aanmelden.html
+++ b/deeltoets1/aanmelden.html
@@ -104,16 +104,16 @@
                         </li>
 
                         <li>
-                            <label for="looptijd">Looptijd:</label>
+                            <label for="looptijdbegin">Looptijd:</label>
                             <p>van</p>
-                            <input id="looptijd" type="date" placeholder="Looptijd">
+                            <input id="looptijdbegin" type="date">
                             <p>tot</p>
-                            <input id="looptijd" type="date" placeholder="Looptijd">
+                            <input id="looptijdeinde" type="date">
                         </li>
 
                         <li>
                             <label for="deadline">Deadline:</label>
-                            <input id="deadline" type="date" placeholder="Deadline">
+                            <input id="deadline" type="date">
                         </li>
                     </ol>
                 </p>
@@ -130,15 +130,15 @@
 
             <article>
                 <h1> Stage </h1>
-                <p>Geschikt voor:</p>
+                <p>Geschikt voor:
                     <ol>
                         <li>
                             <input id="tweedejaars" type="radio" name="geschikt" value="Tweedejaars" checked="checked">
                             <label for="tweedejaars">Tweedejaars studenten</label>
                         </li>
                         <li>
-                            <input id="afstudeer stage" type="radio" name="geschikt" value="Afstudeer stage">
-                            <label for="afstudeer stage">Afstudeer studenten</label>
+                            <input id="afstudeerstage" type="radio" name="geschikt" value="Afstudeer stage">
+                            <label for="afstudeerstage">Afstudeer studenten</label>
                         </li>
                         <li>
                             <input id="onbekend" type="radio" name="geschikt" value="Onbekend">
@@ -157,7 +157,7 @@
                         </li>
 
                         <li>Begin datum
-                            <input id="begindatum" type="date" placeholder="Begin datum">
+                            <input id="begindatum" type="date">
                         </li>
                     </ol>
                 </p>
@@ -170,28 +170,28 @@
                 <p>Beschrijving stagebedrijf
                     <ol>
                         <li>
-                            <label for="bedrijfsnaam">Bedrijfsnaam:</label>
-                            <input id="beschrijfsnaam" type="text" placeholder="Bedrijfsnaam">
+                            <label for="bedrijfsnaam"> Bedrijfsnaam :</label>
+                            <input id="bedrijfsnaam" type="text" placeholder="Bedrijfsnaam">
                         </li>
                         <li>
                             <label for="bedrijfadres">Adres:</label>
-                            <input id="beschrijfadres" type="text" placeholder="Straatnaam+huisnummer">
+                            <input id="bedrijfadres" type="text" placeholder="Straatnaam+huisnummer">
                         </li>
                         <li>
                             <label for="bedrijfzip">Postcode:</label>
-                            <input id="beschrijfzip" type="text" placeholder="1234XX">
+                            <input id="bedrijfzip" type="text" placeholder="1234XX">
                         </li>
                         <li>
                             <label for="bedrijfplaats">Plaats:</label>
-                            <input id="beschrijfplaats" type="text" placeholder="Amsterdam">
+                            <input id="bedrijfplaats" type="text" placeholder="Amsterdam">
                         </li>
                         <li>
                             <label for="bedrijfsector">Sector:</label>
-                            <input id="beschrijfsector" type="text" placeholder="Sector">
+                            <input id="bedrijfsector" type="text" placeholder="Sector">
                         </li>
                         <li>
                             <label for="bedrijfcore">Core Business:</label>
-                            <input id="beschrijfcore" type="text" placeholder="Core Business">
+                            <input id="bedrijfcore" type="text" placeholder="Core Business">
                         </li>
                     </ol>
                 </p>
